[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main/Main.gd" type="Script" id=1]
[ext_resource path="res://HUDs and menus/InitialMenu.gd" type="Script" id=2]
[ext_resource path="res://Godot Themes/OnlyTheme.tres" type="Theme" id=3]
[ext_resource path="res://Buttons/ButtonWithPopup.gd" type="Script" id=4]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="InitialMenu" type="Control" parent="."]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuContainer" type="VBoxContainer" parent="InitialMenu"]
margin_left = 64.0
margin_top = 232.0
margin_right = 936.0
margin_bottom = 608.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="InitialMenu/MainMenuContainer"]
margin_right = 872.0
margin_bottom = 46.0
theme = ExtResource( 3 )
text = "START"
script = ExtResource( 4 )

[node name="HSeparator1" type="HSeparator" parent="InitialMenu/MainMenuContainer"]
margin_top = 50.0
margin_right = 872.0
margin_bottom = 82.0
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RulesButton" type="Button" parent="InitialMenu/MainMenuContainer"]
margin_top = 86.0
margin_right = 872.0
margin_bottom = 132.0
theme = ExtResource( 3 )
text = "RULES"
script = ExtResource( 4 )

[node name="HSeparator2" type="HSeparator" parent="InitialMenu/MainMenuContainer"]
margin_top = 136.0
margin_right = 872.0
margin_bottom = 168.0
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="InitialMenu/MainMenuContainer"]
margin_top = 172.0
margin_right = 872.0
margin_bottom = 218.0
theme = ExtResource( 3 )
text = "OPTIONS"
script = ExtResource( 4 )

[node name="HSeparator3" type="HSeparator" parent="InitialMenu/MainMenuContainer"]
margin_top = 222.0
margin_right = 872.0
margin_bottom = 254.0
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="InitialMenu/MainMenuContainer"]
margin_top = 258.0
margin_right = 872.0
margin_bottom = 304.0
theme = ExtResource( 3 )
text = "QUIT"
script = ExtResource( 4 )

[connection signal="pressed" from="InitialMenu/MainMenuContainer/StartButton" to="InitialMenu" method="_on_StartButton_pressed"]
[connection signal="pressed" from="InitialMenu/MainMenuContainer/RulesButton" to="InitialMenu" method="_on_RulesButton_pressed"]
[connection signal="pressed" from="InitialMenu/MainMenuContainer/OptionsButton" to="InitialMenu" method="_on_OptionstButton_pressed"]
[connection signal="pressed" from="InitialMenu/MainMenuContainer/QuitButton" to="InitialMenu" method="_on_QuitButton_pressed"]
